Enhance registration with role-based code validation
Refactored AuthController and AuthService to enforce role-specific code validation during user registration: SUPER_ADMIN requires platformUserCode and tenantCode, ADMIN requires tenantCode, and USER/MANAGER require tenantUserCode. Improved error handling and validation logic, and updated PlatformUserRepository with clearer method documentation and queries. This strengthens registration security and clarifies the registration flow for different user roles.